nginx-ingress/echoserver/echoserver-tls-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - echo.example.net
    secretName: echoserver-tls
  rules:
  - host: echo.example.net
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 80
